# everclaw-tracing

./: .gitignore  LICENSE  README.md  SKILL.md  STORE_DEPOSIT_DESIGN.md
package/everclaw-tracing/: README.md  everclaw_tracing_autoload.pth  pyproject.toml
package/everclaw-tracing/everclaw_tracing/: __init__.py  config.py  context.py  everclaw-plugin.toml  instrument.py  spans.py  usage.py
package/everclaw-tracing/tests/: real_turn_isolated.py  test_p0_instrument.py
viewer/: everos-deposits.js  log-store.js  package.json  server.js  state-dir.js  trace-viewer.js
viewer/ui/: app.css  app.js
