[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "everclaw-tracing"
version = "0.1.0"
description = "Pluggable, non-invasive tracing for EverClaw via import-time auto-instrumentation (audit.span.v1)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

# EverClaw discovers plugins through this entry-point group. The value is the
# bare package name; EverClaw reads ``everclaw-plugin.toml`` from inside it via
# importlib.resources, which imports this package — that import is our hook to
# install auto-instrumentation (see everclaw_tracing/__init__.py).
[project.entry-points."everclaw.plugins"]
everclaw_tracing = "everclaw_tracing"

[tool.hatch.build.targets.wheel]
packages = ["everclaw_tracing"]

# Ship the manifest as package data so importlib.resources can find it; ship a
# .pth that imports the package at interpreter startup so EVERY everclaw command
# (tui / gateway / agent / cron) auto-instruments — not only the ones that run
# plugin discovery (e.g. `everclaw tui` does not).
[tool.hatch.build.targets.wheel.force-include]
"everclaw_tracing/everclaw-plugin.toml" = "everclaw_tracing/everclaw-plugin.toml"
"everclaw_tracing_autoload.pth" = "everclaw_tracing_autoload.pth"
